--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,11 @@
 body {
-background-color: yellow;
-text-align: center;
+  background-color: yellow;
+  text-align: center;
 }
 .heading {
-text-decoration: underline;
+  text-decoration: underline;
 }
+p {
+  text-size: 30px;
+}
+  
