--- a/Style.css
+++ b/Style.css
@@ -1,13 +1,14 @@
 body {
-  background-color: yellow;
   text-align: center;
 }
 .heading {
   text-decoration: underline;
   margin-bottom: 50px;
+  background-color: teal;
 }
 p {
   text-size: 50px;
   margine-top: 50px;
+  background-color: yellow;
 }
   
