--- a/Style.css
+++ b/Style.css
@@ -7,6 +7,12 @@
   text-align: center;
   }
 
+.container {
+  margin: 0 auto;
+  max-width: 940px; 
+  padding: 0 10px;
+}
+
 body {
   text-align: center;
   background-color: yellow;
