--- a/Style.css
+++ b/Style.css
@@ -11,8 +11,12 @@
   margin: 0 auto;
   max-width: 940px; 
   padding: 0 10px;
-}
 
+.header .container {
+  position: relative;
+  top: 200px;
+}
+  
 body {
   text-align: center;
   background-color: yellow;
