--- a/Style.css
+++ b/Style.css
@@ -33,3 +33,13 @@ p {
 #heading {
   text-decoration: underline;
   }
+  
+.nbutton:hover {
+  background-color: #004E89;
+  border-color: #004E89;
+}
+.nbutton {
+  hight: 200px;
+  width: 200px;
+  border: 2px solid black;
+  }
