--- a/Style.css
+++ b/Style.css
@@ -32,7 +32,7 @@ html, body {
   border-color: #004E89;
 }
 .nbutton {
-  hight: 200px;
+  height: 200px;
   width: 200px;
-  border: 2px solid black;
+  border: 2px solid blue;
   }
