--- a/Style.css
+++ b/Style.css
@@ -36,6 +36,8 @@ html, body {
   height: 200px;
   width: 200px;
   border: 2px solid blue;
+  display: inline-block;
+  margine: 30px;
   }
 #navigationp {
   position: relative;
