--- a/Style.css
+++ b/Style.css
@@ -1,14 +1,15 @@
 html, body {
   padding: 0;
   margin: 0;
+  background-color: lightblue;
   }
 
 .main-heading {
   text-decoration: underline;
-  margin-bottom: 50px;
+  margin-bottom: 0;
   background-color: teal;
   background-size: cover;
-  height: 500px;
+  height: 400px;
   text-align: center;
   }
 
@@ -42,5 +43,6 @@ html, body {
 #navigationp {
   position: relative;
   text-align: center;
-  
+  background-color: lightblue;
+  padding-top: 100;
 }
