--- a/Style.css
+++ b/Style.css
@@ -1,48 +1,52 @@
 html, body {
-  padding: 0;
-  margin: 0;
-  background-color: lightblue;
-  }
+    padding: 0;
+    margin: 0;
+    background-color: lightblue;
+}
 
 .main-heading {
-  text-decoration: underline;
-  margin-bottom: 0;
-  background-color: teal;
-  background-size: cover;
-  height: 400px;
-  text-align: center;
-  }
+    text-decoration: underline;
+    margin-bottom: 0;
+    background-color: teal;
+    background-size: cover;
+    height: 400px;
+    text-align: center;
+}
 
 .container {
-  margin: 0 auto;
-  min-width: 200px; 
-  padding: 0 10px;
-  }
-
-  .main-heading .container {
-  position: relative;
-  top: 200px;
-  }
-  
-#heading {
-  text-decoration: underline;
-  }
-  
-.nbutton:hover {
-  background-color: #004E89;
-  border-color: #004E89;
-  margin: 10px auto;
+    margin: 0 auto;
+    min-width: 200px;
+    padding: 0 10px;
 }
+
+.main-heading .container {
+    position: relative;
+    top: 200px;
+}
+
+#heading {
+    text-decoration: underline;
+}
+
+.nbutton:hover {
+    background-color: #004E89;
+    border-color: #004E89;
+}
+
 .nbutton {
-  height: 200px;
-  width: 200px;
-  border: 2px solid blue;
-  display: inline-block;
-  margin: 30px;
-  }
+    height: 200px;
+    width: 200px;
+    border: 2px solid blue;
+    display: inline-block;
+    margin: 30px;
+}
+
 #navigationp {
-  position: relative;
-  text-align: center;
-  background-color: lightblue;
-  padding-top: 100;
+    position: relative;
+    text-align: center;
+    background-color: lightblue;
+}
+
+.nbutton, p {
+    margin-top: 90
 }
