--- a/Style.css
+++ b/Style.css
@@ -39,6 +39,7 @@ html, body {
     border: 2px solid blue;
     display: inline-block;
     margin: 30px;
+    border-radius: 10px;
 }
 
 #navigationp {
