--- a/Style.css
+++ b/Style.css
@@ -40,7 +40,7 @@ html, body {
     display: inline-block;
     margin: 30px;
     border-radius: 10px;
-    opacity: 50;
+    opacity: .50;
 }
 
 #navigationp {
