--- a/Style.css
+++ b/Style.css
@@ -31,6 +31,7 @@ html, body {
 .nbutton:hover {
     background-color: #004E89;
     border-color: #004E89;
+    border-radius: 20px;
 }
 
 .nbutton {
