--- a/Style.css
+++ b/Style.css
@@ -50,12 +50,13 @@ html, body {
     background-color: lightblue;
     margin-bottom: 50px;
 }
-
-.footer {
+#footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     background-color: cde2e9;
     height: 61px;
 }
-
 
  
 .contact {
